2004-04-16  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-row.c: (gantt_row_get_bounds),
	(gantt_row_draw), (gantt_row_point): Fix bug #137581.

2004-04-16  Richard Hult  <richard@imendio.com>

	* data/stylesheets/Makefile.am:
	* data/stylesheets/html1_css.xsl:
	* data/stylesheets/html1_gantt.xsl:
	* data/stylesheets/html1_resources.xsl:
	* data/stylesheets/html1_tasks.xsl:
	* data/stylesheets/mrproject2html.xsl: Commit patch from Chris
	Ladd to fix bug #129226, bug #135388 and bug #137243.

2004-04-16  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-view.c: (gantt_view_update_ui): Remove
	whitespace.
	
	* src/planner-resource-view.c: (resource_view_update_ui): Fix bug
	where we were trying to update the resource view bonobo ui while
	it was deactivated.

2004-04-15  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* src/planner-ttable-row.c: (ttable_row_event): Removed the
	MOTION_NOTIFY event for read-only view.

2004-04-15  Richard Hult  <richard@imendio.com>

	* src/planner-task-dialog.c: (task_dialog_task_removed_cb),
	(planner_task_dialog_new): Use connect_object and fix the callback
	signature, fixes bug #140208.

2004-04-15  Richard Hult  <richard@imendio.com>

	* data/glade/html-output.glade:
	* src/planner-html-plugin.c: (html_plugin_export): Hide the remote
	saving for now since it doesn't really work.

2004-04-15  Richard Hult  <richard@imendio.com>

	* configure.in: Disable dotnet by default.
	* src/planner-task-tree.c: (planner_task_tree_move_task_up),
	(planner_task_tree_move_task_down): Clean up a bit.

2004-04-15  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-assignment.c: (assignment_set_property):
	* libplanner/mrp-object.c: (mrp_object_set_property):
	* src/planner-task-dialog.c:
	(task_dialog_resource_units_cell_edited): Workaround for bug
	#138368, based on patch from Lincoln.

2004-04-15  Richard Hult  <richard@imendio.com>

	* src/planner-task-tree.c: (planner_task_tree_move_task_up),