@@ -1,3 +1,8 @@
+2004-04-17  Alvaro del Castillo  <acs@barrapunto.com>
+
+	* src/planner-gantt-row.c: undo code for task
+	constraints, task movement and task indentation.
+
 2004-04-16  Richard Hult  <richard@imendio.com>
 
 	* src/planner-gantt-row.c: (gantt_row_get_bounds),
